# safenote

./: .gitignore  README.md  pyproject.toml
safenote/: __init__.py
